--- a/foodiebudgettools/index.html
+++ b/foodiebudgettools/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="budget-container">
         <div class="app-title">
-            <a href="">Code<b>Explained</b></a>
+            <a href="">Foodies<b>Group</b></a>
         </div>
         <div class="budget-header">
             <div class="balance">
