--- a/chatroom/public/index.html
+++ b/chatroom/public/index.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Firebase chatroom</title>
+    <title>React Firebase Superchat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
