--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
@@ -6,14 +6,27 @@
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <meta name="theme-color" content="#000000"/>
         <meta name="description" content="Web site created using create-react-app"/>
-        <link rel="apple-touch-icon" href="/logo192.png"/>
-        <link rel="manifest" href="/manifest.json"/>
+        
         <title>React Firebase Chatroom</title>
-    
+        <link rel="stylesheet" href="Style.css"/>
+        <script src="https://apis.google.com/_/scs/apps-static/_/js/k=oz.gapi.en.gnwtWNvUGcY.O/m=gapi_iframes/rt=j/sv=1/d=1/ed=1/am=AQ/rs=AGLTcCP6AkYbdIi7zNVG6LbV1_mXrObMOA/cb=gapi.loaded_0" async=""></script>
+        <script src="https://www.googletagmanager.com/gtag/js?l=dataLayer" async=""></script>
+        <script type="text/javascript" charset="UTF-8" src="https://apis.google.com/js/api.js?onload=__iframefcb573303" gapi_processed="true"></script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
+        <div id="root">
+            <div class="App">
+                <header>
+                    <h1>⚛️🔥💬</h1>
+                </header>
+                <section>
+                    <button class="sign-in">Sign in with Google</button>
+                    <p>
+                        Please don't violate the community guidelines or you will be banned for life!</p>
+                </section>
+            </div>
+        </div>
         <script>
             !function(e) {
                 function t(t) {
